# crispr-ai-research-suite

./: .env.example  .gitignore  CITATION.cff  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  source-health.yml
docs/: LINE_SIMILARITY_ACTION_PLAN_2026-02-22.md  REVIEW_NOTES_2026-02-22.md  line_similarity_audit_2026-02-22-post-rewrite.json  line_similarity_audit_2026-02-22.json
scripts/: external_source_healthcheck.py
src/crisprairs/: __init__.py  __main__.py  app.py
src/crisprairs/apis/: blast.py  crispor.py  ensembl.py  ncbi.py  primer3_api.py
src/crisprairs/engine/: __init__.py  context.py  runner.py  workflow.py
src/crisprairs/literature/: __init__.py  icite.py  pubmed.py  pubtator.py  service.py
tests/: conftest.py  test_app.py  test_integration.py  test_llm_parser.py  test_llm_provider.py
tests/test_apis/: test_blast.py  test_crispor.py  test_ensembl.py  test_ncbi.py  test_primer3.py
tests/test_engine/: test_context.py  test_runner.py  test_workflow.py
tests/test_literature/: test_icite.py  test_pubmed.py  test_pubtator.py  test_service.py
tests/test_rpw/: test_audit.py  test_collaboration.py  test_evaluation.py  test_experiments.py  test_feedback.py  test_protocols.py  test_sessions.py
tests/test_safety/: test_biosafety.py  test_privacy.py
tests/test_workflows/: test_activation_repression.py  test_automation.py  test_base_editing.py  test_delivery.py  test_evidence.py  test_knockout.py  test_off_target.py  test_prime_editing.py  test_troubleshoot.py  test_validation.py
(+32 files in other folders)
