[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crispr-ai-research-suite"
version = "0.1.0"
description = "AI-assisted CRISPR experiment design: from target selection to validated protocols"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "Tim Moore", email = "tim.moore286@gmail.com"},
]
keywords = ["crispr", "bioinformatics", "gene-editing", "ai", "research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "gradio>=6.0",
    "openai>=1.0",
    "anthropic>=0.39.0",
    "requests>=2.28",
    "python-dotenv>=1.0",
    "biopython>=1.80",
    "primer3-py>=2.0.0",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]

[project.urls]
Repository = "https://github.com/Tmmoore286/crispr-ai-research-suite"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
